# nifty-routing-board-game

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ai_server.py  index.html  main.c  main.js  main.wasm  pyproject.toml
src/routing_board_game/: ai_server.py  game_env.py  play_game.py  train.py
src/routing_board_game/cli/: main.py
